src/objects/Actions_deprecated__c.object
<CustomObject>
    <description>used for tracking Petition and capWiz Advocacy actions</description>
    <fields>
        <fullName>Action_Date__c</fullName>
        <description>date this action or petition was taken by the user</description>
        <label>Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action_Name__c</fullName>
        <label>Action Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Content__c</fullName>
        <label>Campaign Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Medium__c</fullName>
        <label>Campaign Medium</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Source__c</fullName>
        <label>Campaign Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Term__c</fullName>
        <label>Campaign Term</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Actions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CapWiz_Alert_ID__c</fullName>
        <description>The ID of this capWiz action</description>
        <label>CapWiz Alert ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CapWiz_Alert_Recipient__c</fullName>
        <description>Target of advocacy action from CapWiz</description>
        <label>CapWiz Alert Recipient</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CapWiz_Alert_URL__c</fullName>
        <formula>&quot;http://capwiz.com/client name goes here/issues/alert/?alertid=&quot; &amp;  CapWiz_Alert_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CapWiz Alert URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CapWiz_Event_ID__c</fullName>
        <externalId>true</externalId>
        <label>CapWiz Event ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <inlineHelpText>Which advocate took this action or signed the petition?</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Drupal_Node_ID__c</fullName>
        <label>Drupal Node ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drupal_Petition_URL__c</fullName>
        <formula>&quot;http://www.clientdomain.org/node/&quot; &amp; TEXT( Drupal_Node_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drupal Petition URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drupal_Submission_Record__c</fullName>
        <formula>&quot;https://www.clientname.org/node/&quot; &amp; TEXT( Drupal_Node_ID__c ) &amp; &quot;/submission/&quot; &amp; TEXT( Submission_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drupal Submission Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Referrer__c</fullName>
        <label>Initial Referrer</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Source_Type__c</fullName>
        <formula>CASE( LEFT( UPPER( Market_Source__c ), 3),
&quot;EML&quot;,&quot;Email&quot;,
&quot;WEB&quot;,&quot;Organic Website&quot;,
&quot;BAN&quot;,&quot;Banner Ads&quot;,
&quot;GAD&quot;,&quot;Google Ads&quot;,
&quot;OTH&quot;,&quot;Other&quot;,
&quot;n/a&quot;)</formula>
        <label>Market Source Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Source__c</fullName>
        <label>Market Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Campaign__c</fullName>
        <label>Original Campaign</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P2P_Personal_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P2P Personal Campaign</label>
        <referenceTo>P2P_Personal_Campaign__c</referenceTo>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <label>Referrer</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Engine__c</fullName>
        <label>Search Engine</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Search_String__c</fullName>
        <label>Search String</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Social_Referrer_Transaction__c</fullName>
        <label>Social Referrer Transaction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_ID__c</fullName>
        <description>used to track the submission ID from Drupal</description>
        <label>Submission ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Agent__c</fullName>
        <label>User Agent</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Comment__c</fullName>
        <label>User Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>last_30__c</fullName>
        <formula>IF(TODAY() - Action_Date__c  &lt;= 30, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>last 30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Action Deprecated</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllDrupalPet</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Action_Date__c</columns>
        <columns>Action_Name__c</columns>
        <columns>Campaign__c</columns>
        <columns>Contact__c</columns>
        <columns>Drupal_Petition_URL__c</columns>
        <columns>Initial_Referrer__c</columns>
        <columns>Market_Source__c</columns>
        <columns>Market_Source_Type__c</columns>
        <columns>Referrer__c</columns>
        <columns>Submission_ID__c</columns>
        <columns>User_Comment__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Actions_deprecated__c.petition_submission</value>
        </filters>
        <label>All Drupal Petitions</label>
    </listViews>
    <listViews>
        <fullName>All_CapWiz_Actions</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Action_Date__c</columns>
        <columns>Action_Name__c</columns>
        <columns>Campaign__c</columns>
        <columns>Contact__c</columns>
        <columns>Drupal_Petition_URL__c</columns>
        <columns>Initial_Referrer__c</columns>
        <columns>Market_Source__c</columns>
        <columns>Market_Source_Type__c</columns>
        <columns>Referrer__c</columns>
        <columns>Submission_ID__c</columns>
        <columns>User_Comment__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Actions_deprecated__c.CapWiz_Action</value>
        </filters>
        <label>All CapWiz Actions</label>
    </listViews>
    <nameField>
        <label>Action Submission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions Deprecated</pluralLabel>
    <recordTypes>
        <fullName>CapWiz_Action</fullName>
        <active>true</active>
        <description>used for tracking capwiz actions</description>
        <label>CapWiz Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>petition_submission</fullName>
        <active>true</active>
        <description>used for tracking petition submissions</description>
        <label>Petition Submission</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>